# BuildSystem

build_system/: .gitignore  CMakeLists.txt  main.cpp
build_system/cfg/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
build_system/src/DependencyGraph/: CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.h
build_system/src/Exception/: CMakeLists.txt
build_system/src/Exception/FlagParseException/: CMakeLists.txt  FlagParseException.cpp  FlagParseException.h
build_system/src/PathFilter/: CMakeLists.txt  PathFilter.cpp  PathFilter.h
build_system/src/staff/: CMakeLists.txt  flag_parse.cpp
example_app/: .gitignore  CMakeLists.txt  main.cpp
example_app/cfg/: globals.cpp
example_app/src/Point/: Point.cpp  Point.h
